--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testanother
+spring.datasource.username=root
+spring.datasource.password=12345678
 
+server.port: 8888
